// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`projectMission snapshots drafting state 1`] = `
{
  "engineering": {
    "clusters": [],
    "workflowGraph": null,
  },
  "layers": [],
  "phase": "drafting",
  "phaseStrip": [
    {
      "key": "drafting",
      "label": "编辑需求",
      "status": "current",
    },
    {
      "key": "planning",
      "label": "需求分析",
      "status": "todo",
    },
    {
      "key": "verifying",
      "label": "任务确认",
      "status": "todo",
    },
    {
      "key": "done",
      "label": "已完成",
      "status": "todo",
    },
  ],
  "primaryCta": {
    "kind": "open-setup",
    "label": "编写需求",
  },
  "project": {
    "id": null,
    "name": "未关联仓库",
    "rootPath": "",
  },
  "requirements": [],
  "risks": {
    "blockedTaskCount": 0,
    "crossRepoRequirementCount": 0,
    "validationIssueCount": 0,
  },
  "selectedEvidence": null,
  "selection": {
    "highlightedTaskIds": [],
    "requirementId": null,
    "taskId": null,
  },
  "subtitle": "项目使命 · 等待 PRD",
  "title": "新需求",
}
`;

exports[`projectMission snapshots planning state with dependency layers 1`] = `
{
  "engineering": {
    "clusters": [
      {
        "diff": "unknown",
        "id": "c-a",
        "runStatusInternal": "idle",
        "validationIssueCount": 0,
      },
      {
        "diff": "unknown",
        "id": "c-b",
        "runStatusInternal": "idle",
        "validationIssueCount": 0,
      },
    ],
    "workflowGraph": null,
  },
  "layers": [
    {
      "id": "layer-1",
      "index": 1,
      "isBottleneck": true,
      "isParallel": false,
      "tasks": [
        {
          "dependencyTaskIds": [],
          "dimmed": false,
          "highlighted": true,
          "id": "pending-c-a",
          "placeholder": true,
          "repositoryLabel": "前端 · web",
          "selected": false,
          "sourceRequirementIds": [
            "REQ-1",
          ],
          "status": "queued",
          "statusLabel": "等待生成",
          "title": "Build cockpit surface",
        },
      ],
    },
    {
      "id": "layer-2",
      "index": 2,
      "isBottleneck": true,
      "isParallel": false,
      "tasks": [
        {
          "dependencyTaskIds": [
            "pending-c-a",
          ],
          "dimmed": true,
          "highlighted": false,
          "id": "pending-c-b",
          "placeholder": true,
          "repositoryLabel": "后端 · api",
          "selected": false,
          "sourceRequirementIds": [
            "REQ-2",
          ],
          "status": "queued",
          "statusLabel": "等待生成",
          "title": "Connect writer",
        },
      ],
    },
  ],
  "phase": "planning",
  "phaseStrip": [
    {
      "key": "drafting",
      "label": "编辑需求",
      "status": "done",
    },
    {
      "key": "planning",
      "label": "需求分析",
      "status": "current",
    },
    {
      "key": "verifying",
      "label": "任务确认",
      "status": "todo",
    },
    {
      "key": "done",
      "label": "已完成",
      "status": "todo",
    },
  ],
  "primaryCta": {
    "disabled": false,
    "kind": "generate-tasks",
    "label": "拆分任务",
  },
  "project": {
    "id": "p",
    "name": "Wise",
    "rootPath": "/tmp/wise",
  },
  "requirements": [
    {
      "crossGroup": false,
      "highlighted": true,
      "id": "REQ-1",
      "owningTaskGroupIds": [
        "c-a",
      ],
      "taskCount": 0,
    },
    {
      "crossGroup": false,
      "highlighted": false,
      "id": "REQ-2",
      "owningTaskGroupIds": [
        "c-b",
      ],
      "taskCount": 0,
    },
  ],
  "risks": {
    "blockedTaskCount": 0,
    "crossRepoRequirementCount": 0,
    "validationIssueCount": 0,
  },
  "selectedEvidence": null,
  "selection": {
    "highlightedTaskIds": [
      "pending-c-a",
    ],
    "requirementId": "REQ-1",
    "taskId": null,
  },
  "subtitle": "项目使命 · 2 条需求 · 2 个仓位 · 2 个任务",
  "title": "Mission",
}
`;

exports[`projectMission snapshots verifying state with selected evidence 1`] = `
{
  "engineering": {
    "clusters": [
      {
        "diff": "unknown",
        "id": "c-a",
        "runStatusInternal": "succeeded",
        "validationIssueCount": 0,
      },
    ],
    "workflowGraph": null,
  },
  "layers": [
    {
      "id": "layer-1",
      "index": 1,
      "isBottleneck": true,
      "isParallel": false,
      "tasks": [
        {
          "dependencyTaskIds": [],
          "dimmed": false,
          "highlighted": true,
          "id": "T-1",
          "placeholder": false,
          "repositoryLabel": "前端 · web",
          "selected": true,
          "sourceRequirementIds": [
            "REQ-1",
          ],
          "status": "completed",
          "statusLabel": "已完成",
          "title": "Build mission canvas",
        },
      ],
    },
  ],
  "phase": "verifying",
  "phaseStrip": [
    {
      "key": "drafting",
      "label": "编辑需求",
      "status": "done",
    },
    {
      "key": "planning",
      "label": "需求分析",
      "status": "done",
    },
    {
      "key": "verifying",
      "label": "任务确认",
      "status": "current",
    },
    {
      "key": "done",
      "label": "已完成",
      "status": "todo",
    },
  ],
  "primaryCta": {
    "disabled": false,
    "kind": "write-trellis",
    "label": "保存任务",
  },
  "project": {
    "id": "p",
    "name": "Wise",
    "rootPath": "/tmp/wise",
  },
  "requirements": [
    {
      "crossGroup": false,
      "highlighted": false,
      "id": "REQ-1",
      "owningTaskGroupIds": [
        "c-a",
      ],
      "taskCount": 1,
    },
    {
      "crossGroup": false,
      "highlighted": false,
      "id": "REQ-2",
      "owningTaskGroupIds": [],
      "taskCount": 0,
    },
  ],
  "risks": {
    "blockedTaskCount": 0,
    "crossRepoRequirementCount": 0,
    "validationIssueCount": 0,
  },
  "selectedEvidence": {
    "codeAnchors": [
      {
        "filePath": "src/App.tsx",
        "line": 42,
        "raw": "src/App.tsx:42",
        "repositoryId": 1,
      },
    ],
    "dod": [
      "Visible status",
    ],
    "isEdited": false,
    "isManual": false,
    "prdAnchor": {
      "from": 10,
      "preview": "Show mission status ... Keep evidence visible",
      "to": 80,
    },
    "sourceRequirementIds": [
      "REQ-1",
    ],
    "status": "completed",
    "statusLabel": "已完成",
    "subtasks": [
      "Layout",
    ],
    "taskAnchor": {
      "contextAfter": "Keep evidence visible",
      "contextBefore": "Show mission status",
      "from": 10,
      "to": 80,
    },
    "taskId": "T-1",
    "technical": {
      "clusterRequirementIds": [
        "REQ-1",
      ],
      "deletedTaskIds": [],
      "dispatchRunId": null,
    },
    "title": "Build mission canvas",
  },
  "selection": {
    "highlightedTaskIds": [
      "T-1",
    ],
    "requirementId": null,
    "taskId": "T-1",
  },
  "subtitle": "项目使命 · 2 条需求 · 1 个仓位 · 1 个任务",
  "title": "Mission",
}
`;

exports[`projectMission snapshots done state with workflow graph 1`] = `
{
  "engineering": {
    "clusters": [],
    "workflowGraph": {
      "edgeCount": 3,
      "nodeCount": 4,
      "status": "draft",
      "workflowId": "wf-1",
    },
  },
  "layers": [],
  "phase": "done",
  "phaseStrip": [
    {
      "key": "drafting",
      "label": "编辑需求",
      "status": "done",
    },
    {
      "key": "planning",
      "label": "需求分析",
      "status": "done",
    },
    {
      "key": "verifying",
      "label": "任务确认",
      "status": "done",
    },
    {
      "key": "done",
      "label": "已完成",
      "status": "current",
    },
  ],
  "primaryCta": {
    "disabled": false,
    "kind": "open-workflow",
    "label": "查看执行编排",
    "workflowId": "wf-1",
  },
  "project": {
    "id": "p",
    "name": "Wise",
    "rootPath": "/tmp/wise",
  },
  "requirements": [],
  "risks": {
    "blockedTaskCount": 0,
    "crossRepoRequirementCount": 0,
    "validationIssueCount": 0,
  },
  "selectedEvidence": null,
  "selection": {
    "highlightedTaskIds": [],
    "requirementId": null,
    "taskId": null,
  },
  "subtitle": "项目使命 · 等待 PRD",
  "title": "Wise",
}
`;
